--- a/AllTheAirgeadApp/alltheairgeadApp/Strings/en-US/Resources.resw
+++ b/AllTheAirgeadApp/alltheairgeadApp/Strings/en-US/Resources.resw
@@ -120,14 +120,11 @@
   <data name="AddAppBarButton.Label" xml:space="preserve">
     <value>add</value>
   </data>
-  <data name="Header.Text" xml:space="preserve">
-    <value>MY APPLICATION</value>
+  <data name="LogoutButton.Label" xml:space="preserve">
+    <value>Logout</value>
   </data>
   <data name="NavigationFailedExceptionMessage" xml:space="preserve">
     <value>Navigation failed.</value>
-  </data>
-  <data name="Pivot.Title" xml:space="preserve">
-    <value>All the Airgead</value>
   </data>
   <data name="PivotItem1.Header" xml:space="preserve">
     <value>Add Expense</value>
@@ -138,10 +135,7 @@
   <data name="PivotItem3.Header" xml:space="preserve">
     <value>DailyView</value>
   </data>
-  <data name="SecondaryButton1.Label" xml:space="preserve">
-    <value>secondary command 1</value>
-  </data>
-  <data name="SecondaryButton2.Label" xml:space="preserve">
-    <value>secondary command 2</value>
+  <data name="Title.Text" xml:space="preserve">
+    <value>All the Airgead</value>
   </data>
 </root>
