Added comments to mobile service

--- a/AllTheAirgeadApp/alltheairgeadApp/Strings/en-US/Resources.resw
+++ b/AllTheAirgeadApp/alltheairgeadApp/Strings/en-US/Resources.resw
@@ -121,7 +121,7 @@
     <value>add</value>
   </data>
   <data name="LogoutButton.Label" xml:space="preserve">
-    <value>Logout</value>
+    <value>logout</value>
   </data>
   <data name="NavigationFailedExceptionMessage" xml:space="preserve">
     <value>Navigation failed.</value>
